--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,18 @@
 {
-    "parserOptions": {
-        "ecmaVersion": 2017,
-        "sourceType": "module",
-        "ecmaFeatures": {
-            "jsx": true
-        }
-    },
-    "env": {
-        "es6": true
-    },
-    "plugins": ["react"],
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 2017,
+    "sourceType": "module",
     "ecmaFeatures": {
-        "jsx": true,
-        "modules": true
+      "jsx": true
     }
+  },
+  "env": {
+    "es6": true
+  },
+  "plugins": ["react"],
+  "ecmaFeatures": {
+    "jsx": true,
+    "modules": true
+  }
 }
