--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-video-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://andyfarmertuishg.github.io/video-list/",
+  "homepage": "https://andyfarmertuishg.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
